
[metadata]
name = zhmc-ansible-modules
summary =  Ansible modules managing a z Systems via the HMC Web Services API.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Andreas Scheuring, Juergen Leopold, Andreas Maier
author-email = scheuran@de.ibm.com, leopoldj@de.ibm.com, maiera@de.ibm.com
maintainer = Andreras Scheuring, Juergen Leopold, Andreas Maier
maintainer-email = scheuran@de.ibm.com, leopoldj@de.ibm.com, maiera@de.ibm.com
home-page = https://github.ibm.com/LEOPOLDJ/zhmc-ansible-modules
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    ansible/modules/zhmc
    ansible/module_utils/zhmc

[entry_points]

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
