
[metadata]
name = zhmc-ansible-modules
summary =  Ansible modules managing a IBM Z via the HMC Web Services API.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Andreas Scheuring, Juergen Leopold, Andreas Maier
author-email = scheuran@de.ibm.com, leopoldj@de.ibm.com, maiera@de.ibm.com
maintainer = Andreas Scheuring, Juergen Leopold, Andreas Maier
maintainer-email = scheuran@de.ibm.com, leopoldj@de.ibm.com, maiera@de.ibm.com
home-page = https://github.com/zhmcclient/zhmc-ansible-modules
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    zhmc_ansible_modules

[entry_points]

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]

# Note: W504 (line break after binary operator) is ignored because it started
# to be issued around 10/2018 for situations that are perfectly ok.
ignore = W504

exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    docs/gen,
    build,
